infra/aws-secure-platform/kubernetes/example-app/namespace.yaml
# Copyright (c) 2026 Benjamin Levin. All Rights Reserved.
# Unauthorized use or distribution is strictly prohibited.
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
